--- a/css/main1.css
+++ b/css/main1.css
@@ -197,14 +197,21 @@
     font-weight: normal;
     color: #9A9C9E;
     padding: 0;
-    text-align: left;
+    text-align: center;
     padding-bottom: 8px;
-    padding-left: 8px;
     font-size: 13px;
-    padding-right: 5px;
     line-height: 1.428571429;
     vertical-align: top;
+    min-width: 60px;
     border-top: 1px solid #dddddd;
+}
+
+.catalog th.file_custom-header {
+    min-width: inherit;
+}
+
+.catalog .item-title {
+    text-align: left;
 }
 
 /* POPOVER (popup small)*/
