maybe some changes? i dont remember o_o

--- a/Bundle.less
+++ b/Bundle.less
@@ -1,4 +1,4 @@
-﻿@import "slick.css";
+@import "slick.css";
 @import "/Content/fonts/RubArial/stylesheet.css";
 @import "/Content/fonts/Icons/stylesheet.css";
 @import "/Content/fancybox/jquery.fancybox.css";
