--- a/Helpers.less
+++ b/Helpers.less
@@ -1,4 +1,4 @@
-﻿.box-sizing(@box-sizing) {
+.box-sizing(@box-sizing) {
     -ms-box-sizing: @box-sizing;
     -moz-box-sizing: @box-sizing;
     box-sizing: @box-sizing;
