--- a/Bundle.less
+++ b/Bundle.less
@@ -1,12 +1,12 @@
-@import "slick.css";
+@import "/Content/slick.css";
 @import "/Content/fonts/RubArial/stylesheet.css";
 @import "/Content/fonts/Icons/stylesheet.css";
 @import "/Content/fancybox/jquery.fancybox.css";
-@import "jquery.dragscroll.less";
-@import "Normalize.less";
-@import "Helpers.less";
-@import "HelveticaFont.less";
-@import "Common.less";
+@import "/Content/jquery.dragscroll.less";
+@import "/Content/Normalize.less";
+@import "/Content/Helpers.less";
+@import "/Content/HelveticaFont.less";
+@import "/Content/Common.less";
 
-@import "grid/grid-framework.less";
+@import "/Content/grid/grid-framework.less";
 
