--- a/Common.less
+++ b/Common.less
@@ -4592,6 +4592,10 @@ textarea.b-form-control {
 .b-breadcrumbs {
   margin-bottom: 1.2rem;
 
+  &_catalog {
+    margin-top: -2px;
+  }
+
   &__item {
     text-decoration: none;
 
@@ -4780,5 +4784,110 @@ textarea.b-form-control {
   }
   &__link {
     display: block;
+  }
+}
+
+.b-title-h2 {
+  text-transform: uppercase;
+}
+
+.b-filter {
+  &-form__panel {
+    margin-top: 10px;
+  }
+
+  &-form__panel .panel-heading {
+    background-color: rgba(red(#c8caca), green(#c8caca), blue(#c8caca), 0.5);
+
+
+    &__link {
+      font-weight: bold;
+      text-decoration: none;
+      font-size: 1rem;
+      padding-left: 20px;
+    }
+
+    &__icon {
+      background-position-y: 8px;
+    }
+
+    &__link.collapsed .panel-heading__icon {
+      background-position-y: 6px;
+    }
+
+
+  }
+  &-form__panel .panel-body {
+    .b-nouislider {
+
+      &-serialized {
+        margin: 15px 0;
+
+        &__label {
+          display: inline-block;
+          height: 28px;
+          line-height: 1.428571429;
+          padding: 6px 8px;
+        }
+
+        &__input {
+          width: 25%;
+          display: inline-block;
+          min-width: 40px;
+          max-width: 100px;
+          height: 28px;
+          padding: 6px 12px;
+          font-size: 14px;
+          line-height: 1.428571429;
+          color: #555555;
+          vertical-align: top;
+          background-color: #ffffff;
+          border: 1px solid #cccccc;
+          /* border-radius: 4px; */
+          -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+        }
+
+        &__measure {
+          padding-left: 8px;
+        }
+      }
+
+      &-graphics {
+        height: 10px;
+      }
+
+
+    }
+  }
+
+  .b-checkbox-container {
+    margin-left: 10px;
+    margin-top: 10px;
+
+    .b-checkbox_filter {
+
+    }
+  }
+
+  .filter-instock, .filter-offers {
+    border-top: 2px #c8caca solid;
+    border-bottom: 2px #c8caca solid;
+    padding: 4px 0;
+  }
+
+  .b-button_filter {
+    width: 100%;
+    border: 0.2rem solid @yellow_color;
+    color: @gray_color;
+    text-align: center;
+  }
+}
+
+#filter-result {
+  & h4 {
+    font-size: 1.4rem;
   }
 }
