Поправил стрелки в сладйере "шоу рум"

--- a/Common.less
+++ b/Common.less
@@ -830,6 +830,7 @@ html:not(.b-html_mobile) {
   height: 0;
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
 
   &__arrow {
@@ -891,13 +892,12 @@ html:not(.b-html_mobile) {
     &_show-room {
       bottom: 35rem;
       margin-bottom: -3.25rem;
-
       &_next {
-        right: 4rem;
+        right: 1rem;
       }
 
       &_prev {
-        left: 4rem;
+        left: 1rem;
       }
 
       &_prev {
@@ -920,11 +920,11 @@ html:not(.b-html_mobile) {
     &__arrow {
       &_show-room {
         &_next {
-          right: -4rem;
+          right: -5rem;
         }
 
         &_prev {
-          left: -4rem;
+          left: -5rem;
         }
       }
     }
@@ -975,7 +975,8 @@ html:not(.b-html_mobile) {
 
   &__item {
     height: 40rem;
-    padding-right: 0.4rem;
+    padding-right: 0.2rem;
+    padding-left: 0.2rem;
   }
 
   &__item:last-child {
