Поправил хлебные крошки

--- a/Common.less
+++ b/Common.less
@@ -4600,6 +4600,9 @@ textarea.b-form-control {
 .b-breadcrumbs {
   margin-bottom: 1.2rem;
   margin-top: 1.2rem;
+  &_no-mt{
+    margin-top: 0;
+  }
 
   &_catalog {
     margin-top: -2px;
@@ -4924,9 +4927,6 @@ textarea.b-form-control {
   font-size: 1.2rem;
   border-bottom: 2px #c8caca solid;
   line-height: 1.1;
-  .b-breadcrumbs {
-    margin-top: 0;
-  }
 }
 
 .b-section__content-subsection-title {
