--- a/css/main1.css
+++ b/css/main1.css
@@ -202,7 +202,7 @@
     font-size: 13px;
     line-height: 1.428571429;
     vertical-align: top;
-    min-width: 60px;
+    /*min-width: 60px;*/
     border-top: 1px solid #dddddd;
 }
 
