--- a/Common.less
+++ b/Common.less
@@ -4955,7 +4955,7 @@ textarea.b-form-control {
 
 .b-section__content-breadcrumbs {
   font-size: 1.2rem;
-  border-bottom: 2px #c8caca solid;
+//  border-bottom: 2px #c8caca solid;
   line-height: 1.1;
 }
 
