--- a/Common.less
+++ b/Common.less
@@ -5115,3 +5115,35 @@ textarea.b-form-control {
     overflow-x: auto;
   }
 }
+
+.b-section-materials {
+  &__item {
+    border-bottom: 1px solid #c8caca;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+
+    &-link {
+      display: block;
+
+    }
+    &-icon {
+      width: 38px;
+      height: 38px;
+      border-width: 2px;
+      vertical-align: middle;
+      background-color: #ffffff;
+
+      &.icon-pdf-big {
+        background-position: -21px 6px;
+      }
+      background-position: 8px 6px;
+    }
+
+    &:hover &-icon {
+      background-color: #eff0f0;
+    }
+    &-title {
+      vertical-align: middle;
+    }
+  }
+}
