--- a/fonts/rub_arial/stylesheet.css
+++ b/fonts/rub_arial/stylesheet.css
@@ -40,5 +40,5 @@
 .b-rub, .b-rub_arial {
   font-family: 'ALSRubl-Arial', Arial, sans-serif;
   line-height: normal;
-    font-size: 16px;
+    /*font-size: 16px;*/
 }
