--- a/Common.less
+++ b/Common.less
@@ -644,7 +644,14 @@ body {
     &:after {
       background-color: @yellow_color;
     }
+
+
   }
+
+
+}
+.b-header-top-section__link-active:after {
+  background-color: @yellow_color;
 }
 
 .left,
@@ -808,6 +815,10 @@ body {
     right: auto;
     left: 1rem;
     height: 17rem;
+  }
+
+  &_show-room {
+    width: auto;
   }
 }
 
@@ -2032,6 +2043,10 @@ html:not(.b-html_mobile) {
 
     &_payment {
       width: 16rem;
+    }
+
+    &-active {
+      font-weight: bold;
     }
 
     &:hover {
@@ -3448,8 +3463,25 @@ textarea.b-form-control {
   border: 0.1rem solid #e3e3e3;
   background: transparent;
 }
-
+.b-mobile-lents__carousel {
+  display: none;
+}
+.b-section-lents__carousel {
+  display: block;
+}
 @media screen and (max-width: @screen-md-min) {
+  .b-mobile-lents__carousel {
+
+    .banner-title {
+      color: #6e7172;
+    }
+    display: block;
+
+  }
+  .b-section-lents__carousel {
+    display: none;
+  }
+
   .b-footer-mobile-table {
     display: table;
     width: 100%;
@@ -3494,6 +3526,8 @@ textarea.b-form-control {
 }
 
 @media screen and (min-width: @screen-md-min) {
+
+
   #footer_collapse {
     .collapse {
       display: block;
@@ -4016,7 +4050,7 @@ textarea.b-form-control {
   &__cell {
     padding: 1rem;
     vertical-align: middle;
-    border-bottom: 0.2rem solid #DBDBDB;
+    border-bottom: 1px solid #DBDBDB;
 
     &_header-cell {
       font-weight: normal;
@@ -4841,7 +4875,7 @@ textarea.b-form-control {
     &__link {
       font-weight: bold;
       text-decoration: none;
-      font-size: 1rem;
+      font-size: 1.2rem;
       padding-left: 20px;
     }
 
@@ -4993,7 +5027,7 @@ textarea.b-form-control {
   width: 100%;
   line-height: 50px;
   vertical-align: middle;
-  height: 50px;
+  height: 55px;
   text-align: center;
   color: #626363;
 }
@@ -5119,12 +5153,12 @@ textarea.b-form-control {
 .b-section-materials {
   &__item {
     border-bottom: 1px solid #c8caca;
-    margin-bottom: 10px;
-    padding-bottom: 10px;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
 
     &-link {
       display: block;
-
+      text-decoration: none;
     }
     &-icon {
       width: 38px;
@@ -5147,3 +5181,22 @@ textarea.b-form-control {
     }
   }
 }
+
+.b-links {
+  &__h2 {
+    font-size: 12px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    color: #6e7172;
+  }
+}
+
+.series-description-block {
+  &__title {
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+}
+
+#main-cart.cart-empty > #main-cart-badge {display: none}
