новая главная страница

--- a/Common.less
+++ b/Common.less
@@ -645,11 +645,10 @@ body {
       background-color: @yellow_color;
     }
 
-
   }
 
-
 }
+
 .b-header-top-section__link-active:after {
   background-color: @yellow_color;
 }
@@ -838,7 +837,7 @@ body {
 
   &_show-room {
     width: auto;
-}
+  }
 }
 
 html:not(.b-html_mobile) {
@@ -3493,12 +3492,15 @@ textarea.b-form-control {
   border: 0.1rem solid #e3e3e3;
   background: transparent;
 }
+
 .b-mobile-lents__carousel {
   display: none;
 }
+
 .b-section-lents__carousel {
   display: block;
 }
+
 @media screen and (max-width: @screen-md-min) {
   .b-mobile-lents__carousel {
 
@@ -3508,6 +3510,7 @@ textarea.b-form-control {
     display: block;
 
   }
+
   .b-section-lents__carousel {
     display: none;
   }
@@ -3556,7 +3559,6 @@ textarea.b-form-control {
 }
 
 @media screen and (min-width: @screen-md-min) {
-
 
   #footer_collapse {
     .collapse {
@@ -4665,7 +4667,7 @@ textarea.b-form-control {
 
   padding-bottom: 1.2rem;
 
-//  margin-bottom: 1.2rem;
+  //  margin-bottom: 1.2rem;
   margin-top: 1.2rem;
   &_no-mt {
     margin-top: 0;
@@ -4689,7 +4691,6 @@ textarea.b-form-control {
     }
   }
 
-
 }
 
 .b-section__content-breadcrumbs {
@@ -4705,12 +4706,8 @@ textarea.b-form-control {
     padding-left: 30px;
     margin-top: 1.2rem;
 
-
   }
 }
-
-
-
 
 .fancybox {
   &-lock &-overlay {
@@ -5020,7 +5017,7 @@ textarea.b-form-control {
 
 .b-section__content-breadcrumbs {
   font-size: 1.2rem;
-//  border-bottom: 2px #c8caca solid;
+  //  border-bottom: 2px #c8caca solid;
   line-height: 1.1;
 }
 
@@ -5230,7 +5227,10 @@ textarea.b-form-control {
   }
 }
 
-#main-cart.cart-empty > #main-cart-badge {display: none}
+#main-cart.cart-empty > #main-cart-badge {
+  display: none
+}
+
 .b-services-table {
   display: table;
   margin: 0 auto;
@@ -5307,6 +5307,9 @@ textarea.b-form-control {
 
 .b-slider_projects,
 .b-slider_blog {
+  .b-simple-arrow {
+    top: 7.5rem;
+  }
   &__item {
     width: 22rem;
     margin-right: 2rem;
