стили для кнопки в админке. Возможно, кое-что из пятничных изменений

--- a/Common.less
+++ b/Common.less
@@ -5167,7 +5167,7 @@ textarea.b-form-control {
 
 .popup-register, .popup-service {
   width: 550px;
-  margin-left: calc(50% - 275px);
+  margin-left: ~"calc(50% - 275px)";
 }
 
 .b-html_mobile {
