новая страница контактов

--- a/Common.less
+++ b/Common.less
@@ -2721,16 +2721,15 @@ html:not(.b-html_mobile) {
   width: 100%;
   display: table;
   table-layout: fixed;
-  margin-bottom: 2rem;
 }
 
 .b-contacts-page {
-  padding: 3rem 0 4rem;
+  padding: 3rem 0 6rem;
 }
 
 .b-contacts-cell {
   display: table-cell;
-  padding: 2.2rem 0 3rem;
+  padding: 2.2rem 0 0;
   width: 50%;
 
   &__heading {
@@ -5343,7 +5342,7 @@ textarea.b-form-control {
 
     &:hover img {
         -webkit-filter: grayscale(0);
-    }
+  }
   }
 
   &__image {
@@ -5428,6 +5427,13 @@ textarea.b-form-control {
       background-size: 100% 100%;
     }
   }
+}
+
+.b-map {
+  position: relative;
+  width: 38rem;
+  height: 20rem;
+  margin: 0 auto;
 }
 
 .b-slider_banners__arrow.b-slider_blog__arrow_prev {
