--- a/Common.less
+++ b/Common.less
@@ -5431,7 +5431,7 @@ textarea.b-form-control {
 
 .b-map {
   position: relative;
-  width: 38rem;
+  width: 100%;
   height: 20rem;
   margin: 0 auto;
 }
