вёрстка таблицы и хлебных крошек

--- a/Common.less
+++ b/Common.less
@@ -4514,8 +4514,8 @@ textarea.b-form-control {
     font-size: 0;
     padding-bottom: 1.2rem;
     margin-bottom: 2rem;
-    padding-top: 1.2rem;
-    border-top: 1px dotted @gray_color;
+//    padding-top: 1.2rem;
+//    border-top: 1px dotted @gray_color;
     border-bottom: 1px dotted @gray_color;
     text-align: center;
 
@@ -4704,12 +4704,13 @@ textarea.b-form-control {
 }
 
 .b-section__content-breadcrumbs {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   //border-bottom: 2px #c8caca solid;
   line-height: 1.2;
 
   & .b-breadcrumbs {
     border-bottom: 2px #c8caca solid;
+    margin-bottom: 1.4rem;
   }
 
   &.breadcumbs_ontop {
@@ -5028,12 +5029,6 @@ textarea.b-form-control {
   background-repeat: no-repeat;
   background-color: #eaceb8;
   padding: 14rem 0 13.2rem;
-}
-
-.b-section__content-breadcrumbs {
-  font-size: 1.2rem;
-  //  border-bottom: 2px #c8caca solid;
-  line-height: 1.1;
 }
 
 .b-section__content-subsection-title {
