--- a/css/admin.css
+++ b/css/admin.css
@@ -209,3 +209,23 @@ h1 a{ color: #cccccc; }
 .equal-block label{ font-weight: normal; cursor: pointer }
 
 .text-green{ color: #B5BD26}
+
+.tree-hierarchy__block-count {
+    max-width: 150px;
+    position: relative;
+}
+.count-block_input {
+    padding: 2px 10px;
+    max-width: 100%;
+    width: calc(100% - 35px);
+}
+.count-block_save-btn {
+    position: absolute;
+    top: 5px;
+    right: 40px;
+    
+}
+
+.count-block_label {
+    width: 30px;
+}
