--- a/Common.less
+++ b/Common.less
@@ -2615,8 +2615,6 @@ html:not(.b-html_mobile) {
   &-content {
     &_about {
       color: #595959;
-      margin-left: -2rem;
-      margin-right: -2rem;
       padding-bottom: 3rem;
     }
 
@@ -2735,12 +2733,12 @@ html:not(.b-html_mobile) {
 }
 
 .b-contacts-page {
-  padding: 3rem 0 6rem;
+  padding: 18px 0 6rem;
 }
 
 .b-contacts-cell {
   display: table-cell;
-  padding: 2.2rem 0 0;
+//  padding: 2.2rem 0 0;
   width: 50%;
 
   &__heading {
@@ -4126,7 +4124,11 @@ textarea.b-form-control {
 }
 
 .b-cabinet {
-  padding: 4rem 0 2rem;
+  padding: 28px 0 2rem;
+}
+
+.b-delivery {
+  padding-top: 28px;
 }
 
 .b-change-data {
@@ -4292,7 +4294,7 @@ textarea.b-form-control {
 }
 
 .b-cart {
-  padding: 3rem 0;
+  padding: 6rem 0;
 
   &-header {
     width: 100%;
@@ -4675,12 +4677,14 @@ textarea.b-form-control {
 
 .b-breadcrumbs {
 
-  padding-bottom: 1.2rem;
-
-  //  margin-bottom: 1.2rem;
-  margin-top: 1.2rem;
+  padding-bottom: 5px;
+  font-size: 1.3rem;
+  border-bottom: 2px #c8caca solid;
+  margin-bottom: 14px;
+  padding-top: 22px;
   &_no-mt {
     margin-top: 0;
+    padding-top: 0;
   }
 
   &_catalog {
@@ -4704,12 +4708,12 @@ textarea.b-form-control {
 }
 
 .b-section__content-breadcrumbs {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   //border-bottom: 2px #c8caca solid;
-  line-height: 1.2;
+  line-height: 1.3;
 
   & .b-breadcrumbs {
-    border-bottom: 2px #c8caca solid;
+
     margin-bottom: 1.4rem;
   }
 
@@ -5663,4 +5667,32 @@ textarea.b-form-control {
     text-align:center;
   }
 
+}
+
+.filter-column {
+  float: left;
+  &-header {
+    padding: 0;
+    font-weight: bold;
+  }
+  &-body {
+    &__item {
+      padding: 0 3px;
+      box-sizing: border-box;
+      float: none;
+      display: block;
+      margin-right: 10px;
+      width: initial;
+    }
+  }
+}
+
+.filter-column-header_icon, .filter-column-header_tag {
+  padding: 0 3px;
+  float:left;
+}
+
+.filter-column-header_tag {
+
+  margin-right: 10px;
 }
