--- a/css/main1.css
+++ b/css/main1.css
@@ -416,36 +416,36 @@
 .form-control:focus { border: 2px solid #808080; -webkit-box-shadow: none; box-shadow: none; }
 .form-control:hover{ background-color: rgb(239, 243, 201); }
 
-input[type="checkbox"]{ display:none; }
-input[type="checkbox"] + label::before{
-    content: "";
-    display: inline-block;
-    height: 16px;
-    width: 16px;
-    margin: 0 5px -4px 0;
-    background-image: url('/images/sprite-other.png');
-    background-repeat: no-repeat;
-}
-input[type="checkbox"] + label::before{ background-position: -112px 0; }
-input[type="checkbox"] + label:hover::before { background-position: -215px 0 }
-input[type="checkbox"]:checked + label::before { background-position: -330px 0; }
-input[type="checkbox"]:checked + label:hover::before { background-position: -347px 0; }
-input[type="checkbox"]:disabled + label::before { background-position: -232px 0;}
+/*input[type="checkbox"]{ display:none; }*/
+/*input[type="checkbox"] + label::before{*/
+    /*content: "";*/
+    /*display: inline-block;*/
+    /*height: 16px;*/
+    /*width: 16px;*/
+    /*margin: 0 5px -4px 0;*/
+    /*background-image: url('/images/sprite-other.png');*/
+    /*background-repeat: no-repeat;*/
+/*}*/
+/*input[type="checkbox"] + label::before{ background-position: -112px 0; }*/
+/*input[type="checkbox"] + label:hover::before { background-position: -215px 0 }*/
+/*input[type="checkbox"]:checked + label::before { background-position: -330px 0; }*/
+/*input[type="checkbox"]:checked + label:hover::before { background-position: -347px 0; }*/
+/*input[type="checkbox"]:disabled + label::before { background-position: -232px 0;}*/
 
-input[type="checkbox"].little-gray-checkbox + label::before{
-    margin: 0 5px -6px 0;
-    width: 14px;
-}
-input[type="checkbox"].little-gray-checkbox + label{
-    font-weight: normal;
-    color: #d4d4d4;
-    cursor: pointer;
-}
-input[type="checkbox"].little-gray-checkbox + label::before{ background-position: -455px 0; }
-input[type="checkbox"].little-gray-checkbox + label:hover::before { background-position: -455px 0 }
-input[type="checkbox"].little-gray-checkbox:checked + label::before { background-position: -470px 0; }
-input[type="checkbox"].little-gray-checkbox:checked + label:hover::before { background-position: -470px 0; }
-input[type="checkbox"].little-gray-checkbox:disabled + label::before { background-position: -455px 0;}
+/*input[type="checkbox"].little-gray-checkbox + label::before{*/
+    /*margin: 0 5px -6px 0;*/
+    /*width: 14px;*/
+/*}*/
+/*input[type="checkbox"].little-gray-checkbox + label{*/
+    /*font-weight: normal;*/
+    /*color: #d4d4d4;*/
+    /*cursor: pointer;*/
+/*}*/
+/*input[type="checkbox"].little-gray-checkbox + label::before{ background-position: -455px 0; }*/
+/*input[type="checkbox"].little-gray-checkbox + label:hover::before { background-position: -455px 0 }*/
+/*input[type="checkbox"].little-gray-checkbox:checked + label::before { background-position: -470px 0; }*/
+/*input[type="checkbox"].little-gray-checkbox:checked + label:hover::before { background-position: -470px 0; }*/
+/*input[type="checkbox"].little-gray-checkbox:disabled + label::before { background-position: -455px 0;}*/
 
 input[type="radio"]{ display:none; }
 input[type="radio"] + label{
@@ -471,13 +471,13 @@ input[type="radio"]:disabled + label::before { background-position: -417px 0;}
 
 /* Отдельные стили чекбоксов для фильтра внутри серий */
 input[type="checkbox"].filter-checkbox + label {
-    width: 100%;
+    /*width: 100%;*/
     overflow: visible;
-    padding-right: 15px;
+    /*padding-right: 15px;*/
     cursor: pointer;
 }
 input[type="checkbox"].filter-checkbox + label::before{
-    display: inline-block;
+    display: none;
     height: 0;
     width: 0;
     margin: auto;
@@ -506,7 +506,7 @@ input[type="checkbox"].filter-checkbox:checked + label::after
     margin-right: -15px;
 }
 
-input[type="checkbox"].filter-checkbox:checked + label { border-bottom: dotted 1px #ffffff; padding-right: 15px;}
+input[type="checkbox"].filter-checkbox:checked + label { border-bottom: dotted 1px #ffffff}
 
 /* Tables */
 .table-aledo td{
