правки от дизайнера

--- a/Common.less
+++ b/Common.less
@@ -443,7 +443,7 @@ img {
 }
 
 .b-form-error {
-  color : #f23951;
+  color: #f23951;
   display: block;
 }
 
@@ -5351,8 +5351,7 @@ textarea.b-form-control {
   &__image {
     -webkit-filter: grayscale(0.3);
   }
-  .b-slider-item-layout:hover ~ &__image
-  {
+  .b-slider-item-layout:hover ~ &__image {
     -webkit-filter: grayscale(0);
   }
 }
@@ -5548,6 +5547,7 @@ textarea.b-form-control {
       .opacity(0.6);
     }
     &__text {
+      font-size: 1.6rem;
 
     }
     &__inner {
@@ -5616,7 +5616,7 @@ textarea.b-form-control {
 
 .b-phrase {
   padding: 1rem;
-  background: rgba(red(@yellow_color), green(@yellow_color), blue(@yellow_color), 0.8);
+  background: rgba(red(#D6D141), green(#D6D141), blue(#D6D141), 0.9);
   &-table {
     display: table;
     width: 100%;
@@ -5653,18 +5653,18 @@ textarea.b-form-control {
 
 .b-article {
   max-width: 750px;
-  margin:0 auto;
+  margin: 0 auto;
   padding: 1rem 0 3rem;
-  img{
+  img {
     margin: 4.5rem auto;
-    display:block;
+    display: block;
   }
-  &__separator{
-    margin:2.6rem 0;
+  &__separator {
+    margin: 2.6rem 0;
   }
-  &__heading{
-    margin:2.6rem 0;
-    text-align:center;
+  &__heading {
+    margin: 2.6rem 0;
+    text-align: center;
   }
 
 }
