коррективы по блогам

--- a/Common.less
+++ b/Common.less
@@ -5549,7 +5549,7 @@ textarea.b-form-control {
 
 .b-blog {
   &-article {
-    padding: 8rem 0;
+    padding: 4rem 0;
     &:nth-of-type(2n) {
       background-color: #f4f4f4;
     }
@@ -5576,10 +5576,11 @@ textarea.b-form-control {
     }
     &__left, &__right {
       display: table-cell;
-      vertical-align: top;
+
     }
     &__right {
       padding-top: 4rem;
+      vertical-align: bottom;
     }
     &__left {
       padding-right: 5.5rem;
@@ -5626,7 +5627,7 @@ textarea.b-form-control {
 
 .b-phrase {
   padding: 1rem;
-  background: rgba(red(#D6D141), green(#D6D141), blue(#D6D141), 0.8);
+  background: rgba(red(#D6D141), green(#D6D141), blue(#D6D141), 0.7);
   &-table {
     display: table;
     width: 100%;
