--- a/css/catalog.css
+++ b/css/catalog.css
@@ -41,6 +41,7 @@
 
 .item .but-item {
     padding: 0 ;
+    position: relative;
     padding-left: 15px;
 }
 
@@ -302,7 +303,7 @@ p{margin-bottom: 0}
 
 }
 
-.buy-back-btn{ position: absolute; margin-left: 10px; padding: 8px; }
+.buy-back-btn{ /*position: absolute; margin-left: 10px;*/ padding: 8px; }
 
 .buy-to-cart{
     font-size: 10px;
