--- a/Common.less
+++ b/Common.less
@@ -1750,6 +1750,9 @@ html:not(.b-html_mobile) {
 }
 
 @media screen and (max-width: @screen-sm-max) {
+  .b-header-top-section__list-item {
+    padding: 0 0.5rem !important;
+  }
   .b-solution {
     &-header {
       &__cell {
@@ -1992,10 +1995,11 @@ html:not(.b-html_mobile) {
   &__we-work {
     &__list-item {
       border: none;
-      padding: 0 2rem;
+//      padding: 0 2rem;
 
       min-width: 1px;
       min-height: 1px;
+      color: #a5a5a5;
     }
   }
 
@@ -5483,6 +5487,15 @@ textarea.b-form-control {
   width: 100%;
   height: 20rem;
   margin: 0 auto;
+
+
+}
+
+#map_spb {
+  padding-right: 20px;
+}
+#map_msc {
+  padding-left: 20px;
 }
 
 .b-slider_banners__item {
@@ -5623,8 +5636,8 @@ textarea.b-form-control {
 
     }
     &__right {
-      padding-top: 4rem;
-      vertical-align: bottom;
+      padding-top: 2rem;
+      vertical-align: middle;
     }
     &__left {
       padding-right: 5.5rem;
@@ -5722,6 +5735,31 @@ textarea.b-form-control {
     text-align: center;
   }
 
+  table {
+    border: 0;
+    border-color: @gray_color;
+    tbody, tr, td {
+      border-color: @gray_color;
+    }
+    tr {
+      td {
+        padding: 15px;
+        vertical-align: top;
+      }
+    }
+
+    tr:first-child {
+      td {
+        text-align: center;
+        font-weight: bold;
+        vertical-align: middle;
+        p {
+          margin: 0;
+        }
+      }
+      background-color: @gray_l_color;
+    }
+  }
 }
 
 .filter-column {
